--- a/Projeto integrador/style.css
+++ b/Projeto integrador/style.css
@@ -1,141 +1,186 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
 html, body{
-    width: 100%;
-    height: 100%;
-    margin: 0%;
-    padding: 0%;
+  width: 100%;
+  height: 100%;
+  margin: 0%;
+  padding: 0%;
 }
 
 a{
-    text-decoration: none;
-    color: #006aff;
+  text-decoration: none;
+  color: #006aff;
 }
 
 .frame-2{
-    margin: auto;
-    background-color: #b7c5da;
+  margin: auto;
+  background-color: #ffffff;
 }
 .tela-login {
-    background: #2fb828;
-    margin: auto;
-    padding: 0%;
-    display: flex;
-    width: 100%;
-    height: 100%;
+  background: #ffffff;
+  margin: auto;
+  padding: 0%;
+  display: flex;
+  width: 100%;
+  height: 100%;
 
-  }
+}
 
 .rectangle-8 {
-    width: 40%;
-    background: #08244C;
+  width: 40%;
+  background: #08244C;
+  display: flexbox;
+  justify-content: center;
+  justify-items: center;
 
-  }
-  .frame-2 {
-    width: 30%;
-    height: 70%;
-    margin: auto;
+}
+.frame-2 {
+  width: 30%;
+  height: 70%;
+  margin: auto;
 
 
-  }
-.entrar {
-  background: #d9d9d9;
-  border-radius: 10px;
+}
+.but {
+background: #d9d9d9;
+border-radius: 6rem;
+width: 5rem;
+height: 2rem;
+border: none;
 
 }
 .rectangle-7 {
-  color: #000000;
-  text-align: left;
-  font: 500 20px "Poppins", sans-serif;
-  display: flex;
+color: #000000;
+text-align: left;
+font: 500 20px "Poppins", sans-serif;
+display: flex;
 
-  justify-content: center;
+justify-content: center;
 }
-.rectangle-4 {
-  background: #d9d9d9;
-  border-radius: 10px;
+.rectangle{
+background: #d9d9d9;
+border-radius: 0.625rem;
+width: 15rem;
+height: 1.2rem;
+border: none;
+margin-bottom: 1rem;
+}
+.rec{
+display: flex;
+justify-content: center;
+}
+.lg {
+color: #000000;
+text-align: left;
+font: 500 20px "Poppins", sans-serif;
+}
 
-  border: none;
-}
-#rec-4, #pass{
-  display: flex;
-  justify-content: center;
-}
-.e-mail {
-  color: #000000;
-  text-align: left;
-  font: 500 20px "Poppins", sans-serif;
-}
-#e-mail{
-  margin-top: 1rem;
-}
-.rectangle-5 {
-  background: #d9d9d9;
-  border: none;
-  border-radius: 10px;
-
-}
-.senha {
-  color: #000000;
-  text-align: left;
-  font: 500 20px "Poppins", sans-serif;
-
-}
-#key{
-  margin-bottom: 1rem;
+.lg-key{
+margin-bottom: 1rem;
 }
 
 .esqueceu-a-senha {
-  color: #000000;
-  text-align: end;
-  font: 500 20px "Poppins", sans-serif;
+color: #000000;
+text-align: end;
+font: 500 1rem "Poppins", sans-serif;
+margin-bottom: 1rem;
 
 }
-.n-o-tem-um-cadastro-cadastre-se-aqui {
-  text-align: left;
-  font: 500 20px "Poppins", sans-serif;
 
-}
+
 .n-o-tem-um-cadastro-cadastre-se-aqui-span {
-  color: #000000;
-  font: 500 20px "Poppins", sans-serif;
+color: #000000;
+text-align: left;
+font: 400 1rem "Poppins", sans-serif;
 }
 
-.login {
-  color: #000000;
-  text-align: left;
-  font: 700 36px "Inter", sans-serif;
+.a1 {
+color: #000000;
+text-align: left;
+font: 700 36px "Inter", sans-serif;
 
 }
 .ellipse-1 {
-  background: #d9d9d9;
-  border-radius: 50%;
-    width: 3rem ;
-    height: 3rem;
-    display: flexbox;
-    justify-content: center;
+background: #d9d9d9;
+border-radius: 50%;
+  width: 3rem ;
+  height: 3rem;
+  display: flexbox;
+  justify-content: center;
+  margin-top: 2rem;
+
 }
 .arrow-drop-down {
-
+  position: relative;
+  top: 0.6rem;
+  left: 0.5rem;
 }
 
 
 .d-asas-ao-seu-neg-cio-com-owl-flight {
-  color: #ffffff;
-  text-align: left;
-  font: 400 35px/40px "DM Sans", sans-serif;
+color: #ffffff;
+font: 400 2rem/2.5rem "DM Sans", sans-serif;
 
 
+}
+#frase{
+  display: flex;
+  margin: auto;
+  margin: 2rem 2rem;
+  position: relative;
+  bottom: 7rem;
 }
 .photo {
-    margin: auto;
-    filter: brightness(100%);
-    width: 85%;
-    height: 70%;
+  filter: brightness(100%);
+  width: 60%;
+  height: 40%;
+  margin: auto;
+}
+#photo{
+  margin: auto;
+  display: flex;
+  margin-top: 2rem;
 }
 .form{
-  background-color: #08244C;
-  margin: 2rem 3rem 5rem 3rem;
+background-color: #ffffff;
+margin: 2rem 3rem 5rem 3rem;
 
 }
 .slogan{
-  margin: 5rem;
+  margin: auto;
+  display: flexbox;
+  justify-content: center;
+  justify-items: center;
+}
+
+select{
+  background: #d9d9d9;
+  border-radius: 0.625rem;
+  width: 14rem;
+  height: 2.0rem;
+  border: none;
+  margin-bottom: 1rem;
+}
+
+
+/*responsividade */
+
+@media screen and (max-width: 768px) {
+  .frame-2 {
+    width: 80%;
+    height: auto;
+  }
+
+  .rectangle-8 {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .frame-2 {
+    width: 90%;
+    height: auto;
+  }
+
 }
